--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,32 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Work+Sans:ital,wght@0,300;0,400;0,600;1,700&display=swap');
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family:'Work Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-mulish), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-wrap: balance;
-  @apply text-gray-800 tracking-tight
+  @apply text-primary-black tracking-tight
 }
 
-body{
-  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 300;
+body {
+  font-family: var(--font-mulish), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.text-balance{
+.text-balance {
   text-wrap: balance;
 }
 
-p{
-  line-height: 1.7;
-  text-wrap: balance;
+p {
+  line-height: 1.5;
   @apply text-gray-800 mt-4 first:mt-0
 }
 
